--- a/Common_core/libft/Makefile
+++ b/Common_core/libft/Makefile
@@ -1,8 +1,14 @@
 NAME = libft.a
 OBJDIR = obj
+
 SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
 OBJ := $(addprefix $(OBJDIR)/, $(notdir $(OBJ)))
+
+BONUS_SRC = $(wildcard *_bonus.c)
+BONUS_OBJ = $(BONUS_SRC:.c=.o)
+BONUS_OBJ := $(addprefix $(OBJDIR)/, $(notdir $(BONUS_OBJ)))
+
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
@@ -10,6 +16,9 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	ar rcs $(NAME) $(OBJ)
+
+bonus: all $(BONUS_OBJ)
+	ar rcs $(NAME) $(BONUS_OBJ)
 
 $(OBJDIR)/%.o: %.c
 	@mkdir -p $(OBJDIR)
@@ -23,4 +32,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all bonus clean fclean re
