printf a entregar, falta poner librebria libft de 42

--- a/common_core/ft_printf/Makefile
+++ b/common_core/ft_printf/Makefile
@@ -1,48 +1,41 @@
-# Name of the final static library
 NAME = libftprintf.a
 
-# Compiler and flags
 CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
-# Paths
 LIBFT_DIR = libft
 LIBFT_LIB = $(LIBFT_DIR)/libft.a
 INCLUDES = -I. -I$(LIBFT_DIR)
+OBJDIR = obj
 
-# Sources
-SRCS = ft_printf.c
-OBJS = $(SRCS:.c=.o)
+SRC = ft_printf_utils.c ft_printf_functions_1.c ft_printf_functions_2.c ft_printf.c
+OBJ = $(SRC:.c=.o)
+OBJ := $(addprefix $(OBJDIR)/, $(notdir $(OBJ)))
 
-# All
 all: $(NAME)
 
-$(NAME): $(LIBFT_LIB) $(OBJS)
-	@cp $(LIBFT_LIB) temp_libft.a
-	@ar x temp_libft.a
-	@ar rcs $(NAME) $(OBJS) *.o
-	@rm -f temp_libft.a *.o
+$(NAME): $(LIBFT_LIB) $(OBJ)
+	@cp $(LIBFT_LIB) $(NAME)
+	@ar rcs $(NAME) $(OBJ)
 	@echo "✅ $(NAME) creado correctamente."
 
-# Compile .c to .o
-%.o: %.c
+$(OBJDIR):
+	mkdir -p $(OBJDIR)
+
+$(OBJDIR)/%.o: %.c | $(OBJDIR)
 	$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
-# Build libft if not yet built
 $(LIBFT_LIB):
 	$(MAKE) -C $(LIBFT_DIR)
 
-# Clean object files
 clean:
-	rm -f $(OBJS)
+	rm -rf $(OBJDIR)
 	$(MAKE) -C $(LIBFT_DIR) clean
 
-# Clean everything including the .a
 fclean: clean
 	rm -f $(NAME)
 	$(MAKE) -C $(LIBFT_DIR) fclean
 
-# Rebuild
 re: fclean all
 
 .PHONY: all clean fclean re
